--- a/review/package.json
+++ b/review/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "parcel-bundler": "^1.12.4"
-  }
+  },
+  "browserslist": [
+    "last 1 Chrome versions"
+  ]
 }
